# ai_moder

./: .env.example  .gitignore  README.md  chat_rules.md  pyproject.toml
src/tg_guard_bot/: ai.py  bot.py  config.py  history.py  image_generation.py  main.py  models.py  rules.py  settings_webapp.py  social_video.py  state.py  store.py  transcription.py  tts.py  video_generation.py  web_search.py
tests/: test_ask_web_mode.py  test_bot_addressing.py  test_context_prompt.py  test_history.py  test_image_generation.py  test_markdown_rendering.py  test_moderation_policy.py  test_natural_settings.py  test_rules.py  test_settings_webapp.py  test_social_video.py  test_store.py  test_support_detection.py  test_transcription.py  test_video_generation.py  test_web_search.py
