[project]
name = "tg-guard-bot"
version = "0.1.0"
description = "Telegram group moderation bot with optional AI checks and Q&A."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10,<4",
    "aiogram>=3.13,<4",
    "faster-whisper>=1.1,<2",
    "httpx>=0.27,<1",
    "openai>=1.54,<2",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.7,<1",
]

[project.scripts]
tg-guard-bot = "tg_guard_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_guard_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
